# party

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 62651ca3593c_fixed_drop_table_with_cascade.py
app/: containers.py  dependencies.py  ioc.py  main.py
app/applications/: __init__.py  interactors.py  interfaces.py
app/applications/auth/: interactors.py  interfaces.py
app/applications/places/dto/: __init__.py  organizations.py  places.py
app/applications/places/interactors/: __init__.py  organizations.py  places.py
app/applications/places/interfaces/: __init__.py  categories.py  images.py  labels.py  menu_category.py  menu_item.py  organizations.py  (+6 more)
app/auth/: auth.py  dependencies.py  jwt.py  phones.py  routers.py  schemas.py
app/broker/: kafka_consumer.py  kafka_producer.py
app/chats/: models.py
app/controllers/: amqp.py
app/controllers/http/: auth.py  places.py
app/controllers/schemas/: __init__.py  places.py
app/core/: base_class.py  config.py  session.py
app/crud/: places.py
app/db/: base_class.py  session.py
app/db/models/: chats.py  places.py  users.py
app/domain/: __init__.py  essences.py  places.py
app/infrastructure/: broker.py  database.py
app/infrastructure/gateways/: auth.py
app/infrastructure/migrations/: env.py
app/infrastructure/models/: chats.py  interests.py  places.py  reviews.py  users.py
app/old/chats/: crud.py  routers.py  schemas.py
app/old/places/: crud.py  routers.py  schemas.py
app/old/users/: crud.py  routers.py  schemas.py
app/places/: crud.py  models.py  routers.py
app/routers/: main_router.py  places.py
app/schemas/: chats.py  places.py
app/services/: my_service.py
app/users/: crud.py  models.py  schemas.py
app/utils/: containers.py  data_filter.py  phones.py
tests/: test.py
(+22 files in other folders)
