[tool.poetry]
name = "party"
version = "0.1.0"
description = ""
authors = ["Pavel14701 <pavelkutia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
celery = "^5.4.0"
uvicorn = "^0.34.0"
alembic = "^1.14.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
phonenumbers = "^8.13.52"
python-jose = "^3.3.0"
passlib = "^1.7.4"
aiokafka = "^0.12.0"
python-multipart = "^0.0.20"
dishka = "^1.4.2"
faststream = "^0.5.34"
adaptix = "^3.0.0b9"
geoalchemy2 = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
